<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayData">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:id="@+id/display_progressBar"
        android:visibility="gone"></ProgressBar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="234dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="COVID-19\nTracker"
                android:textSize="18dp"
                android:textStyle="bold"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textSize="18dp"
                android:layout_marginLeft="12dp"
                android:text="Today's Statistics"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentdate"
                android:text="6/15/2021"
                android:layout_marginLeft="170dp"></TextView>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Pakistan"
                    android:id="@+id/countryName"
                    android:textSize="20sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/total_cases"></TextView>

                    <TextView
                        android:id="@+id/activeCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/total_case_numbers"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/new_cases"></TextView>

                        <TextView
                            android:id="@+id/newCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/new_case_numbers"
                            android:textColor="@color/blue"></TextView>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/deaths"></TextView>

                    <TextView
                        android:id="@+id/activeDeaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textStyle="bold"
                        android:text="@string/total_case_numbers"
                        android:textColor="@color/red"
                        android:textSize="20sp"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/new_cases"></TextView>

                        <TextView
                            android:id="@+id/newDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/new_case_numbers"
                            android:textColor="@color/red"></TextView>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/recovered"></TextView>

                    <TextView
                        android:id="@+id/activeRecovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/total_case_numbers"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="20sp"></TextView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/new_cases"></TextView>

                        <TextView
                            android:id="@+id/newRecovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/new_case_numbers"
                            android:textColor="@color/green"></TextView>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>




            <org.eazegraph.lib.charts.PieChart
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:id="@+id/pieChart"
                android:layout_marginTop="150dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"></org.eazegraph.lib.charts.PieChart>

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="140dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/blue"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Active"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="87%"
                            android:id="@+id/activePercentage"
                            android:layout_marginLeft="10dp"></TextView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/red"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Death"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="87%"
                            android:id="@+id/deathPercentage"
                            android:layout_marginLeft="10dp"></TextView>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="20dp"
                        android:layout_height="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/green"></View>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="Recovered"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:id="@+id/recoveredPercentage"
                            android:text="87%"></TextView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>



</RelativeLayout>